--- a/css/_misc/_layout.scss
+++ b/css/_misc/_layout.scss
@@ -82,3 +82,7 @@ button {
 		color: inherit;
 }
 
+input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button {
+    -webkit-appearance: none; margin: 0px;
+        }
