--- a/css/blocks/sprite.scss
+++ b/css/blocks/sprite.scss
@@ -116,3 +116,15 @@
 	width: rem(38.126px);
 	height: rem(34.138px);
 }
+
+.play{
+	width: rem(300px);
+	height: rem(300px);
+	fill: rgba(#fff, .7);
+}
+
+.volume{
+	width: rem(300px);
+	height: rem(300px);
+	fill: rgba(#fff, .7);
+}
