--- a/css/main.scss
+++ b/css/main.scss
@@ -75,3 +75,5 @@ $z-index-video-bg: -10;
 @import "blocks/overlay.scss";
 @import "blocks/team.scss";
 @import "blocks/staff.scss";
+@import "blocks/how-wr-working.scss";
+@import "blocks/videocontent.scss";
