--- a/css/main.css
+++ b/css/main.css
@@ -473,6 +473,12 @@ button {
   color: inherit;
 }
 
+input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0px;
+}
+
 @-webkit-keyframes drop-color {
   0% {
     fill: #E45028;
@@ -1581,6 +1587,18 @@ button {
   height: 2.133625rem;
 }
 
+.play {
+  width: 18.75rem;
+  height: 18.75rem;
+  fill: rgba(255, 255, 255, 0.7);
+}
+
+.volume {
+  width: 18.75rem;
+  height: 18.75rem;
+  fill: rgba(255, 255, 255, 0.7);
+}
+
 .contacts {
   background: url("../img/bg/map.jpg") center center/cover no-repeat;
   position: relative;
@@ -2610,4 +2628,19 @@ button {
   -webkit-transform: rotate(-180deg);
           transform: rotate(-180deg);
   top: 35%;
+}
+
+.how-wr-working {
+  background: url("../img/bg/how-wr-working.jpg") center center/cover no-repeat;
+}
+
+.videocontent {
+  max-width: 41.25rem;
+  height: 25.3125rem;
+  width: 100%;
+  background: #2f3234;
+  margin: 3.125rem auto 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
