add videoplayer layout

--- a/src/css/blocks/sprite.scss
+++ b/src/css/blocks/sprite.scss
@@ -121,7 +121,10 @@
 	width: rem(300px);
 	height: rem(300px);
 	fill: rgba(#fff, .7);
+	padding-left: 50px;
+	padding-bottom: 15px;
 }
+
 
 .volume{
 	width: rem(300px);
