--- a/src/css/blocks/videocontent.scss
+++ b/src/css/blocks/videocontent.scss
@@ -11,7 +11,12 @@
 }
 
 .videocontent__container {
+	
 	width: 100%;
+}
+
+.videocontent__player {
+	position: relative;
 }
 
 .videocontent__iframe {
@@ -20,11 +25,13 @@
 }
 
 .videocontent__play-btn {
+	position: absolute;
 	width: 100%;
 	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	top: 0;
 }
 
 .videocontent__controls {
