--- a/src/css/blocks/videocontent.scss
+++ b/src/css/blocks/videocontent.scss
@@ -21,17 +21,63 @@
 
 .videocontent__iframe {
 	width: 100%;
+	height: 100%;
 	aspect-ratio: 16/9;
 }
 
 .videocontent__play-btn {
 	position: absolute;
+	background: url('./../img/content/how-wr-working/player-bg-3.jpg') center center / cover no-repeat;
 	width: 100%;
 	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	top: 0;
+	transition: 1s;
+	opacity: 1;
+
+		&--active {
+			opacity: 0;
+		}
+}
+
+.videocontent__pause-btn {
+	width: rem(200px);
+	height: rem(200px);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: none;
+	justify-content: space-evenly;
+	align-items: center;
+	opacity: 0;
+	transition: .5s;
+
+	&:hover {
+		opacity: 1;
+	}
+
+	&::before {
+		content: '';
+		height: rem(150px);
+		width: rem(40px);
+		background: rgba(#fff, .7);
+		border-radius: 20px;
+	}
+
+	&::after {
+		content: '';
+		height: rem(150px);
+		width: rem(40px);
+		background: rgba(#fff, .7);
+		border-radius: 20px;
+	}
+
+	&--active {
+		display: flex;
+	}
 }
 
 .videocontent__controls {
