--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -21,7 +21,7 @@ $gradient-yellow: #eb8c38;
 
 $z-index-10: 10; // - .header--fullscreen, menu__title
 $z-index-20: 20; // logo, hamburger-open-close-btn, vertical-accordeon__item(адаптив)
-$z-fixed-menu: 100;
+$z-fixed-menu: 100; //videocontrols
 $z-index-video-bg: -10;
 
 
