--- a/src/css/blocks/videocontent.scss
+++ b/src/css/blocks/videocontent.scss
@@ -1,17 +1,19 @@
 .videocontent {
-	max-width: rem(1000px);
+	max-width: 1000px;
 	position: relative;
 	width: 90%;
-	// background: $black;
 	margin: rem(50px) auto 0;
 	display: flex;
 	justify-content: center;
 	margin-inline: auto;
 	aspect-ratio: 16/9;
+
+	@include phones {
+		width: 97%;
+	}
 }
 
-.videocontent__container {
-	
+.videocontent__container {	
 	width: 100%;
 }
 
@@ -54,6 +56,7 @@
 	align-items: center;
 	opacity: 0;
 	transition: .5s;
+	cursor: pointer;
 
 	&:hover {
 		opacity: 1;
@@ -65,6 +68,10 @@
 		width: rem(40px);
 		background: rgba(#fff, .7);
 		border-radius: 20px;
+		@include tablets {
+			height: rem(50px);
+			width: rem(20px);
+		}
 	}
 
 	&::after {
@@ -73,10 +80,19 @@
 		width: rem(40px);
 		background: rgba(#fff, .7);
 		border-radius: 20px;
+
+		@include tablets {
+			height: rem(50px);
+			width: rem(20px);
+		}
 	}
 
 	&--active {
 		display: flex;
+	}
+
+	@include tablets {
+		width: 20%;
 	}
 }
 
@@ -85,4 +101,18 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
+	color: white;
+	z-index: $z-fixed-menu;
+	opacity: 0;
+	transition: opacity .3s ease-in-out;
+
+		&:hover {
+			opacity: 1;
+		}
+
+		&--paused {
+			opacity: 1;
+		}
 }
+
+
