--- a/src/css/_misc/_keyframes.scss
+++ b/src/css/_misc/_keyframes.scss
@@ -129,3 +129,13 @@
 		transform: rotate(0deg);
 	}
 }
+
+@keyframes compositionAnimation {
+	0% {
+			transform-origin: top;
+			transform: scaleY(0);
+	}
+	100% {
+			transform: scaleY(1);
+	}
+}
